humble_ws/log/build_2024-06-03_15-21-22/antworker_moveit_bringup/stderr.log
  File "/home/humble_ws/install/antworker_moveit_bringup/lib/python3.10/site-packages/antworker_moveit_bringup/trajectory_server_sim.py", line 66
    def self.update_joint_states(self, joint_states):
            ^
SyntaxError: invalid syntax

